k8s/ingress/consumer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consumer-service-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: consumer.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consumer-service
                port:
                  number: 80
